style tweaks - better positioning for the cards, fixing the pagination spacing

--- a/rb/static/css/site.css
+++ b/rb/static/css/site.css
@@ -125,7 +125,7 @@ background:url(../images/site/msathead_bg_generic.png)
 #avatar h2 div { display:inline-block;  }
 #avatar button { display:inline-block;  }
 
-.pagination { padding:20px 10px 0 10px; }
+.pagination { }
 /* profile items */
 #follow_info { text-align:left; }
 #follow_info a { display:inline-block; margin-right:30px; color:#454545}
@@ -253,8 +253,22 @@ section[role="main"] div.card div.meta div.me_too_outcome div.close { font-size:
 
 
 /* cards */
-#cards { margin:0 0 0 60px; width:1060px; }
-.card   { width:500px; margin-bottom:20px; position:relative; border-top:10px solid;}
+.cardsWrap {
+    position: relative;
+    margin: 0 auto;
+    width: 1060px;
+}
+#cards { }
+.cardWrap {
+    width:530px;
+    margin-bottom:20px;
+    position:relative;
+}
+.card { 
+    position:relative;
+    margin:0 20px;
+    border-top:10px solid;
+}
 .card:hover   { background:#f7f7f7; }
 .card.color1 { border-color:#84b8ef !important; }
 .card.color2 { border-color:#419bac !important; }
@@ -291,7 +305,10 @@ section[role="main"] div.card div.meta div.me_too_outcome div.close { font-size:
 .card .meta .avatar img { width:32px; margin-left:5px; }
 /*.card .meta .date { display:table-cell; width:155px; vertical-align:middle; font-size:12px; color:#989898; text-align:right;}*/
 
-.pagination {position:absolute;bottom:0;}
+.pagination {
+    text-align: right;
+    margin: 0 20px;
+}
 
 section[role="main"] div.card div.content .comments{ padding: 10px; text-align:left; }
 
